--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  padding : 0;
-  display: flex;
-  place-items: center;
+  padding: 0; /* Good to ensure padding is also zero */
   min-width: 320px;
   min-height: 100vh;
 }
